--- a/1_3.html
+++ b/1_3.html
@@ -18,9 +18,9 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img
-            style="width: 341px; height: 56px"
+            style="width: 227px; height: 37px"
             class="container"
             src="./img/1_0_nav_logo.png"
         /></a>
@@ -28,13 +28,13 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav" style="font-size: 24pt">
+          <ul class="navbar-nav" style="font-size: 18pt">
             <li class="nav-item" style="margin: 0 30px">
               <a
                 class="nav-link active"
                 style="color: #fffbe7"
                 aria-current="page"
-                href="./1_0.html"
+                href="./1_1.html"
                 >占卜頁面</a
               >
             </li>
@@ -65,24 +65,7 @@
       <div class="p_text">選出可口的一張牌作為你的第三餐。</div>
     </div>
     <div class="yl_game">
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
-      <div class="yl_card">
-        <img class="yl_card_front" src="./img/1_1_card_front.png" alt="" />
-      </div>
+      <div id="yl_card"></div>
     </div>
     <div class="final_btn">
       <div class="start_btn">
@@ -114,6 +97,7 @@
         </div>
       </div>
     </div>
+    <script src="./js/card_game.js"></script>
     <script src="./js/bootstrap.js"></script>
   </body>
 </html>
