--- a/1_0.html
+++ b/1_0.html
@@ -18,9 +18,9 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img
-            style="width: 341px; height: 56px"
+            style="width: 227px; height: 37px"
             class="container"
             src="./img/1_0_nav_logo.png"
         /></a>
@@ -28,13 +28,13 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav" style="font-size: 24pt">
+          <ul class="navbar-nav" style="font-size: 18pt">
             <li class="nav-item" style="margin: 0 30px">
               <a
                 class="nav-link active"
                 style="color: #fffbe7"
                 aria-current="page"
-                href="#"
+                href="./1_1.html"
                 >占卜頁面</a
               >
             </li>
@@ -79,16 +79,24 @@
       <div class="footer_container container">
         <div class="footer_icons">
           <div class="footer_icon1">
-            <a href="#"><img src="./img/1_0_ig_icon.png" /></a>
+            <a href="#"
+              ><img class="footer_icons_image" src="./img/1_0_ig_icon.png"
+            /></a>
           </div>
           <div class="footer_icon2">
-            <a href="#"><img src="./img/1_0_dc_icon.png" /></a>
+            <a href="#"
+              ><img class="footer_icons_image" src="./img/1_0_dc_icon.png"
+            /></a>
           </div>
           <div class="footer_icon3">
-            <a href="#"><img src="./img/1_0_threads_icon.png" /></a>
+            <a href="#"
+              ><img class="footer_icons_image" src="./img/1_0_threads_icon.png"
+            /></a>
           </div>
           <div class="footer_icon4">
-            <a href="#"><img src="./img/1_0_fb_icon.png" /></a>
+            <a href="#"
+              ><img class="footer_icons_image" src="./img/1_0_fb_icon.png"
+            /></a>
           </div>
         </div>
         <div class="footer_copyright">
