--- a/1_4.html
+++ b/1_4.html
@@ -18,9 +18,9 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img
-            style="width: 341px; height: 56px"
+            style="width: 227px; height: 37px"
             class="container"
             src="./img/1_0_nav_logo.png"
         /></a>
@@ -28,7 +28,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav" style="font-size: 24pt">
+          <ul class="navbar-nav" style="font-size: 18pt">
             <li class="nav-item" style="margin: 0 30px">
               <a
                 class="nav-link active"
@@ -63,80 +63,90 @@
     <div class="main_p">
       <div class="p_text">根據你的選擇，屬於你的三餐卡牌是......</div>
     </div>
-    <div class="middle_foot">
+    <div id="foot" class="middle_foot">
       <div class="foot foot1"></div>
       <div class="foot foot3"></div>
       <div class="foot foot2"></div>
     </div>
-    <div class="yl_result_card container row">
-      <div class="col-1"></div>
-      <div class="yl_result_card_left col-4">
-        <p class="meal_type">早餐</p>
-        <img src="./img/1_1_card_front.png" />
-      </div>
-      <div class="yl_result_card_right col-7">
-        <div class="food_type">
-          <p style="font-size: 40pt" class="food_title1">御飯糰</p>
-          <p>$23 ~ $55</p>
-        </div>
-        <p class="food_title">建議口味：</p>
-        <p class="food_text">
-          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
-        </p>
-        <p class="food_title">美食銳評：</p>
-        <p class="food_text">
-          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
-        </p>
-      </div>
-    </div>
-    <div class="yl_result_card container row">
-      <div class="col-1"></div>
-      <div class="yl_result_card_left col-4">
-        <p class="meal_type">午餐</p>
-        <img src="./img/1_1_card_front.png" />
-      </div>
-      <div class="yl_result_card_right col-7">
-        <div class="food_type">
-          <p style="font-size: 40pt" class="food_title1">御飯糰</p>
-          <p>$23 ~ $55</p>
-        </div>
-        <p class="food_title">建議口味：</p>
-        <p class="food_text">
-          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
-        </p>
-        <p class="food_title">美食銳評：</p>
-        <p class="food_text">
-          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
-        </p>
-      </div>
-    </div>
-    <div class="yl_result_card container row">
-      <div class="col-1"></div>
-      <div class="yl_result_card_left col-4">
-        <p class="meal_type">晚餐</p>
-        <img src="./img/1_1_card_front.png" />
-      </div>
-      <div class="yl_result_card_right col-7">
-        <div class="food_type">
-          <p style="font-size: 40pt" class="food_title1">御飯糰</p>
-          <p>$23 ~ $55</p>
-        </div>
-        <p class="food_title">建議口味：</p>
-        <p class="food_text">
-          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
-        </p>
-        <p class="food_title">美食銳評：</p>
-        <p class="food_text">
-          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
-        </p>
-      </div>
-    </div>
-    <div class="comments">
+    <div id="resultcomments" class="comments">
       <div class="comments_title">三餐總評</div>
       <div class="comments_text">
         <p>好餓......但聊勝於無。</p>
       </div>
     </div>
+    <div
+      id="yl_resultid_card1"
+      class="yl_result_card yl_result_card1 container row"
+    >
+      <div class="col-2"></div>
+      <div class="yl_result_card_left col-3">
+        <p class="meal_type">早餐</p>
+        <img src="./img/1_1_card_front.png" />
+      </div>
+      <div class="yl_result_card_right col-7">
+        <div class="food_type">
+          <p style="font-size: 24pt" class="food_title1">御飯糰</p>
+          <p>$23 ~ $55</p>
+        </div>
+        <p class="food_title">建議口味：</p>
+        <p class="food_text">
+          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
+        </p>
+        <p class="food_title">美食銳評：</p>
+        <p class="food_text">
+          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
+        </p>
+      </div>
+    </div>
+    <div
+      id="yl_resultid_card2"
+      class="yl_result_card yl_result_card2 container row"
+    >
+      <div class="col-2"></div>
+      <div class="yl_result_card_left col-3">
+        <p class="meal_type">早餐</p>
+        <img src="./img/1_1_card_front.png" />
+      </div>
+      <div class="yl_result_card_right col-7">
+        <div class="food_type">
+          <p style="font-size: 24pt" class="food_title1">御飯糰</p>
+          <p>$23 ~ $55</p>
+        </div>
+        <p class="food_title">建議口味：</p>
+        <p class="food_text">
+          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
+        </p>
+        <p class="food_title">美食銳評：</p>
+        <p class="food_text">
+          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
+        </p>
+      </div>
+    </div>
+    <div
+      id="yl_resultid_card3"
+      class="yl_result_card yl_result_card3 container row"
+    >
+      <div class="col-2"></div>
+      <div class="yl_result_card_left col-3">
+        <p class="meal_type">早餐</p>
+        <img src="./img/1_1_card_front.png" />
+      </div>
+      <div class="yl_result_card_right col-7">
+        <div class="food_type">
+          <p style="font-size: 24pt" class="food_title1">御飯糰</p>
+          <p>$23 ~ $55</p>
+        </div>
+        <p class="food_title">建議口味：</p>
+        <p class="food_text">
+          肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
+        </p>
+        <p class="food_title">美食銳評：</p>
+        <p class="food_text">
+          沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
+        </p>
+      </div>
+    </div>
+
     <div class="final_btn">
       <div class="start_btn">
         <a href="./1_1.html">重新占卜</a>
