--- a/1_5.html
+++ b/1_5.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img
             style="width: 341px; height: 56px"
             class="container"
