--- a/2_0.html
+++ b/2_0.html
@@ -18,9 +18,9 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
+        <a class="navbar-brand" href="index.html"
           ><img
-            style="width: 341px; height: 56px"
+            style="width: 227px; height: 37px"
             class="container"
             src="./img/1_0_nav_logo.png"
         /></a>
@@ -28,13 +28,13 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav" style="font-size: 24pt">
+          <ul class="navbar-nav" style="font-size: 18pt">
             <li class="nav-item" style="margin: 0 30px">
               <a
                 class="nav-link active"
                 style="color: #fffbe7"
                 aria-current="page"
-                href="./1_0.html"
+                href="./1_1.html"
                 >占卜頁面</a
               >
             </li>
@@ -65,40 +65,40 @@
     </div>
     <div class="yl_card_content">
       <div class="yl_card_front">
-        <a href="./2_1.html"><img src="./img/yl_card1.png" /></a>
+        <a href="./2_1.html"><img src="./img/yl1card1.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_2.html"><img src="./img/yl_card2.png" /></a>
+        <a href="./2_2.html"><img src="./img/yl2card2.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_3.html"><img src="./img/yl_card3.png" /></a>
+        <a href="./2_3.html"><img src="./img/yl1card3.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_4.html"><img src="./img/yl_card4.png" /></a>
+        <a href="./2_4.html"><img src="./img/yl1card4.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_5.html"><img src="./img/yl_card5.png" /></a>
+        <a href="./2_5.html"><img src="./img/yl2card5.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_6.html"><img src="./img/yl_card6.png" /></a>
+        <a href="./2_6.html"><img src="./img/yl1card6.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_7.html"><img src="./img/yl_card7.png" /></a>
+        <a href="./2_7.html"><img src="./img/yl2card7.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_8.html"><img src="./img/yl_card8.png" /></a>
+        <a href="./2_8.html"><img src="./img/yl1card8.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_9.html"><img src="./img/yl_card9.png" /></a>
+        <a href="./2_9.html"><img src="./img/yl1card9.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_10.html"><img src="./img/yl_card10.png" /></a>
+        <a href="./2_10.html"><img src="./img/yl1card10.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_11.html"><img src="./img/yl_card11.png" /></a>
+        <a href="./2_11.html"><img src="./img/yl2card11.png" /></a>
       </div>
       <div class="yl_card_front">
-        <a href="./2_12.html"><img src="./img/yl_card12.png" /></a>
+        <a href="./2_12.html"><img src="./img/yl3card12.png" /></a>
       </div>
     </div>
     <div class="footer">
