--- a/2_12.html
+++ b/2_12.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/3_0_yl.png" />
     <title>Hungry Yali</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/bootstrap.css" />
@@ -215,19 +216,10 @@
     </div>
     <div class="footer">
       <div class="footer_container container">
-        <div class="footer_icons">
-          <div class="footer_icon1">
-            <a href="#"><img src="./img/1_0_ig_icon.png" /></a>
-          </div>
-          <div class="footer_icon2">
-            <a href="#"><img src="./img/1_0_dc_icon.png" /></a>
-          </div>
-          <div class="footer_icon3">
-            <a href="#"><img src="./img/1_0_threads_icon.png" /></a>
-          </div>
-          <div class="footer_icon4">
-            <a href="#"><img src="./img/1_0_fb_icon.png" /></a>
-          </div>
+        <div class="footer_icon1">
+          <a href="https://www.instagram.com/yali.hungry?igsh=YjdsbWp2c3E3M2px"
+            ><img class="footer_icons_image" src="./img/1_0_ig_icon.png"
+          /></a>
         </div>
         <div class="footer_copyright">
           Copyright © 2024 鴨梨好餓. All rights reserved.
