--- a/2_4.html
+++ b/2_4.html
@@ -71,12 +71,10 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">
-            韓風洋釀炸雞、鮮肉鍋貼、石安牧場溫泉蛋、香辣炸雞球
-          </p>
+          <p class="food_text">韓風洋釀炸雞、香辣炸雞球</p>
           <p class="food_title">美食銳評：</p>
           <p class="food_text">
-            超級推韓風拌拌炸雞！御料小館好吃！！想不到要吃什麼的時候幾乎不會出錯的選擇！
+            選完主食後擔心廠商又偷偷減肉，那就選一包替自己加料！
           </p>
         </div>
       </div>
