--- a/2_5.html
+++ b/2_5.html
@@ -71,13 +71,9 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">
-            蔥爆沙茶牛肉炒麵、青醬蛤蜊義大利麵、韓式炸醬拌麵
-          </p>
+          <p class="food_text">青醬蛤蜊義大利麵</p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">
-            麵食首推青醬蛤蠣義大利麵，蛤蜊很多，麵條軟硬度剛好，青醬香噴噴也不會太少。
-          </p>
+          <p class="food_text">青醬蛤蠣義大利麵，除了大拇指還是大拇指。</p>
         </div>
       </div>
     </div>
