--- a/index.html
+++ b/index.html
@@ -2,23 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/3_0_yl.png" />
     <title>Hungry Yali</title>
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/footer_style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif+TC:wght@200..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./css/textmove.css" />
   </head>
   <body>
-    <div class="logo"><img src="./img/index_logo.png" alt="" /></div>
-    <div class="start_btn">
-      <a href="./1_1.html">點擊開始</a>
+    <div id="start"></div>
+    <div class="marquee-scroll_up">
+      <div class="marquee-scroll1">
+        <div class="marquee-scroll">
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+        <div class="marquee-scroll">
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+      </div>
+      <div class="marquee-scroll2">
+        <div class="marquee-scroll">
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+        <div class="marquee-scroll">
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="another-marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="marquee-scroll_down">
+      <div class="marquee-scroll1">
+        <div class="marquee-scroll">
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+        <div class="marquee-scroll">
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+      </div>
+      <div class="marquee-scroll2">
+        <div class="marquee-scroll">
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+        <div class="marquee-scroll">
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+          <div class="marquee-text">
+            薩迪曾經說過，世上往往如此，當他們不懂得生活的價值的時候，就會一味地縱情逸樂。希望大家能從這段話中有所收穫。了解清楚鴨梨好餓到底是一種怎麼樣的存在，是解決一切問題的關鍵。話雖如此，我們卻也不能夠這麼篤定。我們需要淘汰舊有的觀念，泰戈爾曾經認為，要是愛情不允許彼此之間有所差異，那麼為什麼世界上到處都有差異呢？這把視野帶到了全新的高度。我們都知道，只要有意義，那麼就必須慎重考慮。培根曾經說過，人生如同道路。最近的捷徑通常是最壞的路。請諸位將這段話在心中默念三遍。在人生的歷程中，鴨梨好餓的出現是必然的。而這些並不是完全重要，更加重要的問題是，需要考慮周詳鴨梨好餓的影響及因應對策。雨果深信，在任何科學上的雛形，都有它雙重的形象：胚胎時的醜惡，萌芽時的美麗。這段話對世界的改變有著深遠的影響。
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
