--- a/2_1.html
+++ b/2_1.html
@@ -19,9 +19,9 @@
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #5c6652">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"
+        <a class="navbar-brand" href="index.html"
           ><img
-            style="width: 341px; height: 56px"
+            style="width: 227px; height: 37px"
             class="container"
             src="./img/1_0_nav_logo.png"
         /></a>
@@ -29,7 +29,7 @@
           class="collapse navbar-collapse justify-content-end"
           id="navbarNav"
         >
-          <ul class="navbar-nav" style="font-size: 24pt">
+          <ul class="navbar-nav" style="font-size: 18pt">
             <li class="nav-item" style="margin: 0 30px">
               <a
                 class="nav-link active"
