--- a/1_0.html
+++ b/1_0.html
@@ -86,7 +86,7 @@
             /></a>
           </div>
         </div>
-        <div class="footer_copyright">
+        <div style="top: 15px" class="footer_copyright">
           Copyright © 2024 鴨梨好餓. All rights reserved.
         </div>
       </div>
