--- a/2_10.html
+++ b/2_10.html
@@ -71,9 +71,13 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">紐奧良風味烤雞、松露嫩蛋</p>
+          <p class="food_text">
+            青醬雞絲、丹麥鮪魚起司、紐奧良風味烤雞、松露嫩蛋
+          </p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">真的很燙，謹防被餡料暗算！</p>
+          <p class="food_text">
+            焦焦的紋路讓人超有食慾。（但真的很燙，謹防被餡料暗算！）
+          </p>
         </div>
       </div>
     </div>
