--- a/2_11.html
+++ b/2_11.html
@@ -71,9 +71,11 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">奮起湖軟燒肉便當</p>
+          <p class="food_text">奮起湖軟燒肉便當、椒鹽大雞排便當</p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">想假裝營養均衡可以選。</p>
+          <p class="food_text">
+            便當加熱之後的飯香真的太過分了......，想假裝營養均衡可以選。
+          </p>
         </div>
       </div>
     </div>
