--- a/2_6.html
+++ b/2_6.html
@@ -71,10 +71,10 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">所長茶葉蛋</p>
+          <p class="food_text">所長茶葉蛋、茶葉蛋</p>
           <p class="food_title">美食銳評：</p>
           <p class="food_text">
-            有裂痕的蛋剝開也可能是披著棕色外皮的騙子水煮蛋。
+            每次夾茶葉蛋的時候都像在博弈，夾到有裂痕的蛋剝開也可能是披著棕色外皮的騙子水煮蛋。
           </p>
         </div>
       </div>
