--- a/2_8.html
+++ b/2_8.html
@@ -71,10 +71,10 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">牛奶蒸果子、紅豆麵包</p>
+          <p class="food_text">牛奶蒸果子、紅豆麵包、海苔肉鬆堡、愛心牛奶球</p>
           <p class="food_title">美食銳評：</p>
           <p class="food_text">
-            愛心牛奶球口味可能一般，但姐吃的是童年回憶na～
+            正餐不夠飽？再來一個麵包剛剛好！鬆軟又香甜，扔進微波爐再吃還蠻像剛出爐的耶～
           </p>
         </div>
       </div>
