--- a/2_9.html
+++ b/2_9.html
@@ -71,9 +71,13 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">21Plus義式烤雞堅果沙拉</p>
+          <p class="food_text">
+            21Plus義式烤雞堅果沙拉、紐奧良風味烤雞時蔬沙拉餐
+          </p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">來一碗沙拉吧，假裝你沒有打破減肥計劃hehehe...</p>
+          <p class="food_text">
+            昨晚又沒管住嘴亂吃？來一碗沙拉彌補罪惡感吧，假裝你沒有打破減肥計劃hehehe...
+          </p>
         </div>
       </div>
     </div>
