--- a/2_0.html
+++ b/2_0.html
@@ -66,39 +66,51 @@
     </div>
     <div class="yl_card_content">
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_1.html"><img src="./img/yl1card1.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_2.html"><img src="./img/yl2card2.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_3.html"><img src="./img/yl1card3.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_4.html"><img src="./img/yl1card4.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_5.html"><img src="./img/yl2card5.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_6.html"><img src="./img/yl1card6.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_7.html"><img src="./img/yl2card7.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_8.html"><img src="./img/yl1card8.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_9.html"><img src="./img/yl1card9.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_10.html"><img src="./img/yl1card10.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_11.html"><img src="./img/yl2card11.png" /></a>
       </div>
       <div class="yl_card_front">
+        <div class="black">查看詳情</div>
         <a href="./2_12.html"><img src="./img/yl3card12.png" /></a>
       </div>
     </div>
