--- a/2_1.html
+++ b/2_1.html
@@ -71,7 +71,9 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">肉鬆、雙蔬鮪魚</p>
+          <p class="food_text">
+            肉鬆、鮪魚、小龍蝦魚卵、炭火燒肉、櫸木燻雞、雙蔬鮪魚
+          </p>
           <p class="food_title">美食銳評：</p>
           <p class="food_text">
             沒有人能在超商飯糰打贏7-11！御飯糰 in your area！！！
