--- a/2_2.html
+++ b/2_2.html
@@ -71,9 +71,13 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">米血糕、白蘿蔔</p>
+          <p class="food_text">
+            華昇飛魚卵海鮮卷、米血糕、白蘿蔔、關東煮春雨、鮮香菇
+          </p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">免錢的湯必須裝爆，好喝。</p>
+          <p class="food_text">
+            想吃點熱熱的小東西的時候非常方便！吸飽湯汁的白蘿蔔超級讚！
+          </p>
         </div>
       </div>
     </div>
