--- a/2_3.html
+++ b/2_3.html
@@ -71,9 +71,13 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">三起司熱狗、美式原味熱狗</p>
+          <p class="food_text">
+            三起司熱狗、椒麻香辣熱狗、美式原味熱狗、大亨堡麵包
+          </p>
           <p class="food_title">美食銳評：</p>
-          <p class="food_text">歡迎挑戰擠出最美番茄醬。（像卡通的那種）</p>
+          <p class="food_text">
+            鬆軟的大亨堡麵包體，夾著溫熱多汁又鹹香夠味的熱狗......我就問，怎麼輸！！！
+          </p>
         </div>
       </div>
     </div>
