--- a/2_7.html
+++ b/2_7.html
@@ -71,10 +71,12 @@
         </div>
         <div class="food_type_introduce">
           <p class="food_title">建議口味：</p>
-          <p class="food_text">日式佛蒙特咖哩雞肉飯、紅燒牛肉燴飯</p>
+          <p class="food_text">
+            歐姆蛋牛肉咖哩飯、日式佛蒙特咖哩雞肉飯、紅燒牛肉燴飯
+          </p>
           <p class="food_title">美食銳評：</p>
           <p class="food_text">
-            紅燒牛肉燴飯相當讚，但區域販售，想吃還得看運氣。
+            每次想不到要吃什麼的時候就會跑去抓一盒佛蒙特咖哩飯。
           </p>
         </div>
       </div>
