--- a/3_0.html
+++ b/3_0.html
@@ -97,7 +97,7 @@
           <p>(陳德蓉)</p>
         </div>
         <p class="food_text">
-          Tasty&Fluffy~不是雞不是鵝，是看起來很好欺負的肥鴨，吃7-11吃到過胖，不過看很開。
+          我很內向我很社恐不要跟我說話我要中風了，我喜歡粉紅色！！！！！
         </p>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <p>(詹淨蓮)</p>
         </div>
         <p class="food_text">
-          Tasty&Fluffy~不是雞不是鵝，是看起來很好欺負的肥鴨，吃7-11吃到過胖，不過看很開。
+          有點下三白的陰角，看起來很兇狠想扁人的時候通常只是在呆。
         </p>
       </div>
     </div>
@@ -123,11 +123,11 @@
       </div>
       <div class="yl_result_card_right col-7">
         <div class="food_type">
-          <p style="font-size: 40pt" class="food_title1">鴨梨</p>
+          <p style="font-size: 40pt" class="food_title1">鴨累</p>
           <p>(廖勁齊)</p>
         </div>
         <p class="food_text">
-          Tasty&Fluffy~不是雞不是鵝，是看起來很好欺負的肥鴨，吃7-11吃到過胖，不過看很開。
+          就是一個幫兩個不會寫程式還選網頁設計的完成期末的小丑。
         </p>
       </div>
     </div>
